--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 		
 	<p></p>	
 		<ul>
+		<li><span id="date">08-24-2022</span> New website design courtesy of my bio/academic niece <a href="https://www.kiragoldner.com/index.html">Kira Goldner!</a></li>
 		<li><span id="date">08-03-2022</span> Excited to be back at Northeastern after my sabbatical!</li>
 		<li><span id="date">06-19-2022</span> Welcome to the family, <a href="img/ezra.jpg">Ezra Rainer Ullman</a>!</li>
 	</ul></div>
