--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 	
 	<p>I am committed to making all of my papers freely available as quickly as possible by hosting them on arXiv or similar open access preprint servers, and these preprints should be considered the authoritative version of the paper.  When possible I will also link to any associated code, data, talks, or expository writing available.  These resources are indicated with <span id="label-preprint">paper</span> <span id="label-code">code</span> <span id="label-talk">talk</span> <span id="label-misc">misc</span> tags.</p>
 	
-	<p>I am against ordering authors by contribution, but sometimes the norms of the community and the needs of students demand it.  Author ordering is alphabetical except where otherwise noted.
+	<p>I prefer not to order authors by contribution, but sometimes the norms of the community and the needs of students demand it.  Author ordering is alphabetical except where otherwise noted.
 
 <h4>Manuscripts</h4>
 
