--- a/service.html
+++ b/service.html
@@ -38,7 +38,7 @@
 	
 <h2>Service</h2>
 	
-<p>I try to serve the community by organizing beneficial events and creating resources for other researchers.  I have also contributed to the peer review process for conferences in a number of areas.
+<p>I enjoy organizing events and creating resources that make the research community more open and welcoming.
 		
 <h4> Organizer </h4>
 <ul>
