--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I enjoy teaching courses and view it as an integral part of research.  In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a>  You can also see what courses I've taught in the past.</p>
+<p>I come from a family of educators, and my passion for teaching is as strong as my passion for research.  In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a>  You can also see what courses I've taught in the past.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
