--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div id="mycontact">
 				<strong>Office:</strong> 623 ISEC (805 Columbus Ave / Boston, MA, 02118)<br/>
-				<strong>Email:</strong> jullman [at] ccs [dot] neu [dot] edu<br/>
+				<strong>Email:</strong> jullman&#64;ccs.neu.edu<br/>
 			</div>
 			<a href="assets/cv.pdf"><img src="img/cv-logo.png" height="40px"></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
