--- a/research.html
+++ b/research.html
@@ -44,6 +44,18 @@
 
 <h4>Manuscripts</h4>
 
+
+<div class="paper">
+	<strong>SNAP: Efficient Extraction of Private Properties with Poisoning</strong>
+	<a href="https://arxiv.org/abs/2208.12348"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Harsh Chaudhuri</a>,
+	<a href="https://johnmath.github.io/">John Abascal</a>,
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
+	<a href="https://jagielski.github.io/">Matthew Jagielski</a>,
+	<a href="https://floriantramer.com/">Florian Tram&egrave;r</a>, and
+	Jonathan Ullman
+</div>
+
 <div class="paper">
 	<strong>How to Combine Membership-Inference Attacks on Multiple Updated Models</strong>
 	<a href="https://arxiv.org/abs/2205.06369"><span id="label-preprint">arXiv</span></a><br/>
@@ -71,14 +83,14 @@
 </div>-->
 
 <div class="paper">
-<strong>A Private and Computationally Efficient Estimator for Unbounded Gaussians</strong>
-<a href="https://arxiv.org/abs/2111.04609"><span id="label-preprint">arXiv</span></a><br/>
-<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
-<a href="">Argyris Mouzakis</a>,
-<a href="http://www.ccs.neu.edu/home/vikrantsinghal/">Vikrant Singhal</a>,
-<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
-Jonathan Ullman<br/>
-Conference on Learning Theory <strong>(COLT '22)</strong><br/>
+	<strong>A Private and Computationally Efficient Estimator for Unbounded Gaussians</strong>
+	<a href="https://arxiv.org/abs/2111.04609"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
+	<a href="">Argyris Mouzakis</a>,
+	<a href="http://www.ccs.neu.edu/home/vikrantsinghal/">Vikrant Singhal</a>,
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
+	Jonathan Ullman<br/>
+	Conference on Learning Theory <strong>(COLT '22)</strong><br/>
 </div>
 
 <div class="paper">
