--- a/cs7800-f22/index.html
+++ b/cs7800-f22/index.html
@@ -54,12 +54,19 @@
 				  </div>
         </div>
 			
-      <h4>Teaching Assistant</h4>
+      <h4>Teaching Assistants</h4>
 		    <div id="instructorinfo"> 
 					<div id="instructorphoto"><img src="img/konstantina-small.png" height="100px"></div>
 		      <div id="instructorname"> 			
 						<p>Konstantina Bairaktari<br/>
-						<a href="mailto: jullman@ccs.neu.edu">bairaktari.k@northeastern.edu</a><br/>
+						<a href="mailto: bairaktari.k@northeastern.edu">bairaktari.k@northeastern.edu</a><br/>
+					  Office Hours: TBD<br/>
+					  Location: TBD</p>
+				  </div>
+					<div id="instructorphoto"><img src="img/rose-small.png" height="100px"></div>
+		      <div id="instructorname"> 			
+						<p>Rose Silver<br/>
+						<a href="mailto: silver.r@northeastern.edu">silver.r@northeastern.edu</a><br/>
 					  Office Hours: TBD<br/>
 					  Location: TBD</p>
 				  </div>
