--- a/cs7800-f22/course-info.html
+++ b/cs7800-f22/course-info.html
@@ -100,7 +100,8 @@
 					<li>Approximation algorithms</li>
 					<li>Online algorithms</li>
 					<li>Linear algebraic algorithms</li>
-					<li>Algorithms and codes</li>
+					<li>Coding theory</li>
+					<li>Auction theory</li>
 				</ul>
 			</ul>
 			
