--- a/cs7800-f22/course-info.html
+++ b/cs7800-f22/course-info.html
@@ -159,7 +159,7 @@
 			</ul>
 		<p>The assignments will be scored so that the total number of points adds up to 500 and any point you earn is treated equally.  So the final exam will be worth 150, the midterm 100, and the homework assignments will sum to 250.
 			
-		<p>I like to give assignments that challenge students, and the difficulty of these assignments can vary from year to year.  As a result, I don't have an absolute scale for mapping points to letter grades.  I will assign final course grades based on a curve, and typically about 50% receive A/A- grades, 50% receiving B+/B/B- grades, and a handful of students receive grades C or lower.   I will publish statistics on the grade distribution frequently, so that students should have a good idea of their standing at all times, and you are always welcome to discuss with me if you are unsure.</p>
+		<p>I like to give assignments that challenge students, and the difficulty of these assignments can vary from year to year.  As a result, I don't have an absolute scale for mapping points to letter grades.  I will assign final course grades based on a curve, and typically about 50% receive A/A- grades, 50% receiving B+/B grades, and a handful of students receive grades B- or lower.   I will publish statistics on the grade distribution frequently, so that students should have a good idea of their standing at all times, and you are always welcome to discuss with me if you are unsure.</p>
 </div>
 
     <div id="buffer"></div>
