--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -56,10 +56,10 @@
 						<li>Course Welcome</li>
 						<li>Stable Matching</li>
 					</ul>
-					[slides before] [slides after]
+					[slides]
 				</td>
-				<td>KT 1.1</td>
-        <td>HW1 Out</td>
+				<td>&mdash;</td>
+        <td>HW1 Out [pdf] [tex]</td>
       </tr>
       <tr>
         <td>Tue<br/> 9/13/22</td>
@@ -78,12 +78,9 @@
         <td>Fri<br/> 9/16/22</td>
         <td>
 					<strong>Lecture 3: Greedy Algorithms II</strong><br/>
-					<ul>
-						<li>Compression and Huffman Codes</li>
-					</ul>
 					[slides before] [slides after]
 				</td>
-				<td>KT 4.8</td>
+				<td></td>
         <td><strong>HW1 Due</strong><br/>
 				HW2 Out</td>
       </tr>
