--- a/cs7800-f22/course-info.html
+++ b/cs7800-f22/course-info.html
@@ -60,14 +60,14 @@
 		      <div id="instructorname"> 			
 						<p>Konstantina Bairaktari<br/>
 						<a href="mailto: bairaktari.k@northeastern.edu">bairaktari.k@northeastern.edu</a><br/>
-					  Office Hours: TBD<br/>
+					  Office Hours: Th 3:00pm &ndash; 5:00pm<br/>
 					  Location: TBD</p>
 				  </div>
 					<div id="instructorphoto"><img src="img/rose-small.png" height="100px"></div>
 		      <div id="instructorname"> 			
 						<p>Rose Silver<br/>
 						<a href="mailto: silver.r@northeastern.edu">silver.r@northeastern.edu</a><br/>
-					  Office Hours: TBD<br/>
+					  Office Hours: F 3:30pm &ndash; 5:30pm<br/>
 					  Location: TBD</p>
 				  </div>
         </div>	
@@ -120,7 +120,7 @@
 				
 			<p>Many students also find the free book <a href="http://jeffe.cs.illinois.edu/teaching/algorithms/">Algorithms</a> by Jeff Erickson to be helpful for getting an alternative view of the material, and the free book <a href="http://people.csail.mit.edu/meyer/mcs.pdf">Mathematics for Computer Science</a> by Lehman, Leighton, and Meyer to be useful for reviewing mathematical concepts.
 			
-			<h4>Piazza</h4>
+			<h4>Discussions</h4>
 			<p>We will be using <a href="https://piazza.com/class/l5x2fyu9chz5i7">Piazza</a> for course discussions.  This system makes it easy for you to get help quickly and efficiently from the instructor, TA, or your classmates.  If you have general questions about the course material or logistics, please use Piazza and make your questions public so that other students with the same questions can see the answers.  If you have questions about the material that are specific to you&mdash;for example you want to know if a certain aspect of your solution is correct, without giving away the solution to others&mdash;you can use private messages to the instructors rather than email to help us stay organized.  If you have logistical questions or personal questions&mdash;for example you are sick, traveling, or an asteroid destroyed your homework&mdash;you can use private messages to the instructors or email the instructors directly.
 				
 			<h4>Homework</h4>
@@ -154,8 +154,8 @@
 		<p>The final course grade will include:</p>
 			<ul>
 				<li>6 homework assignments (50%)</li>
-				<li>a midterm exam (20%)</li>
-				<li>a final exam (30%)</li>
+				<li>an in-class midterm exam (20%)</li>
+				<li>a (likely in-class) final exam (30%)</li>
 			</ul>
 		<p>The assignments will be scored so that the total number of points adds up to 500 and any point you earn is treated equally.  So the final exam will be worth 150, the midterm 100, and the homework assignments will sum to 250.
 			
