--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -38,7 +38,7 @@
 
       <h4>Course Schedule</h4>
 			
-			<p><strong>Reading Code:</strong> KT = Kleinberg Tardos</p>
+			<p><strong>Reading Code:</strong> KT = Kleinberg Tardos; E = Erickson</p>
       
       <p>
       <table class="rg" style="margin-left:auto; margin-right:auto;">
@@ -58,8 +58,8 @@
 					</ul>
 					[slides]
 				</td>
-				<td>&mdash;</td>
-        <td>HW1 Out [pdf] [tex]</td>
+				<td>KT 1.1</td>
+        <td>HW1 Out<br/> <a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
       </tr>
       <tr>
         <td>Tue<br/> 9/13/22</td>
@@ -78,15 +78,20 @@
         <td>Fri<br/> 9/16/22</td>
         <td>
 					<strong>Lecture 3: Greedy Algorithms II</strong><br/>
+					<ul>
+						<li>Minimum Spanning Tree</li>
+					</ul>
 					[slides before] [slides after]
 				</td>
-				<td></td>
+				<td>KT 4.5-4.6<br/>E 7</td>
         <td><strong>HW1 Due</strong><br/>
 				HW2 Out</td>
       </tr>
       <tr>
         <td>Tue<br/>9/20/22</td>
         <td>
+					<strong>Lecture 4: Dynamic Programming I</strong><br/>
+					[slides before] [slides after]
 				</td>
 				<td></td>
         <td></td>
@@ -94,6 +99,8 @@
       <tr>
         <td>Fri<br/>9/23/22</td>
         <td>
+					<strong>Lecture 5: Dynamic Programming II</strong><br/>
+					[slides before] [slides after]
 				</td>
 				<td></td>
         <td></td>
@@ -101,16 +108,19 @@
       <tr>
         <td>Tue<br/>9/27/22</td>
         <td>
+					<strong>Lecture 6: Dynamic Programming III</strong><br/>
+					[slides before] [slides after]
 				</td>
 				<td></td>
-        <td></td>
+				<td></td>
       </tr>
       <tr>
         <td>Fri<br/>9/30/22</td>
         <td>
 				</td>
 				<td></td>
-        <td></td>
+        <td><strong>HW2 Due</strong><br/>
+				HW3 Out</td>
       </tr>
       <tr>
         <td>Tue<br/>10/4/22</td>
@@ -249,6 +259,20 @@
       </tr>
       <tr>
         <td>Fri<br/>12/9/22</td>
+        <td>
+				</td>
+				<td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Tue<br/>12/13/22</td>
+        <td>
+				</td>
+				<td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Fri<br/>12/16/22</td>
         <td>
 				</td>
 				<td></td>
