--- a/cs7800-f22/index.html
+++ b/cs7800-f22/index.html
@@ -60,14 +60,14 @@
 		      <div id="instructorname"> 			
 						<p>Konstantina Bairaktari<br/>
 						<a href="mailto: bairaktari.k@northeastern.edu">bairaktari.k@northeastern.edu</a><br/>
-					  Office Hours: TBD<br/>
+					  Office Hours: Th 3:00pm &ndash; 5:00pm<br/>
 					  Location: TBD</p>
 				  </div>
 					<div id="instructorphoto"><img src="img/rose-small.png" height="100px"></div>
 		      <div id="instructorname"> 			
 						<p>Rose Silver<br/>
 						<a href="mailto: silver.r@northeastern.edu">silver.r@northeastern.edu</a><br/>
-					  Office Hours: TBD<br/>
+					  Office Hours: F 3:30pm &ndash; 5:30pm<br/>
 					  Location: TBD</p>
 				  </div>
         </div>
