--- a/research.html
+++ b/research.html
@@ -44,6 +44,15 @@
 
 <h4>Manuscripts</h4>
 
+<div class="paper">
+	<strong>Multitask Learning via Shared Features: Algorithms and Hardness</strong>
+	<a href="https://arxiv.org/abs/2209.03112"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Konstantina Bairaktari</a>,
+	<a href="https://web.stanford.edu/~gblanc/">Guy Blanc</a>,
+	<a href="http://theory.stanford.edu/~liyang/">Li-Yang Tan</a>,
+	Jonathan Ullman, and
+	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a>
+</div>
 
 <div class="paper">
 	<strong>SNAP: Efficient Extraction of Private Properties with Poisoning</strong>
@@ -53,7 +62,7 @@
 	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
 	<a href="https://jagielski.github.io/">Matthew Jagielski</a>,
 	<a href="https://floriantramer.com/">Florian Tram&egrave;r</a>, and
-	Jonathan Ullman
+	Jonathan Ullman (contribution order)
 </div>
 
 <div class="paper">
