--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -56,7 +56,7 @@
 						<li>Course Welcome</li>
 						<li>Stable Matching</li>
 					</ul>
-					[slides]
+					<a href="assets/01-stable-matching.pdf">[slides]</a>
 				</td>
 				<td>KT 1.1</td>
         <td>HW1 Out<br/> <a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
@@ -69,7 +69,7 @@
 						<li>Interval Scheduling</li>
 						<li>Minimizing Lateness</li>
 					</ul>
-					[slides before] [slides after]
+					[slides]
 				</td>
 				<td>KT 4.1-4.2</td>
         <td></td>
@@ -81,7 +81,7 @@
 					<ul>
 						<li>Minimum Spanning Tree</li>
 					</ul>
-					[slides before] [slides after]
+					[slides]
 				</td>
 				<td>KT 4.5-4.6<br/>E 7</td>
         <td><strong>HW1 Due</strong><br/>
@@ -91,7 +91,7 @@
         <td>Tue<br/>9/20/22</td>
         <td>
 					<strong>Lecture 4: Dynamic Programming I</strong><br/>
-					[slides before] [slides after]
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -100,7 +100,7 @@
         <td>Fri<br/>9/23/22</td>
         <td>
 					<strong>Lecture 5: Dynamic Programming II</strong><br/>
-					[slides before] [slides after]
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -109,7 +109,7 @@
         <td>Tue<br/>9/27/22</td>
         <td>
 					<strong>Lecture 6: Dynamic Programming III</strong><br/>
-					[slides before] [slides after]
+					[slides]
 				</td>
 				<td></td>
 				<td></td>
