--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -69,7 +69,7 @@
 						<li>Interval Scheduling</li>
 						<li>Minimizing Lateness</li>
 					</ul>
-					[slides]
+					<a href="assets/02-greedy-algs.pdf">[slides]</a>
 				</td>
 				<td>KT 4.1-4.2</td>
         <td></td>
