--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -45,8 +45,8 @@
       <tr>
         <th style="width: 100px;">Date</th>
         <th style="width: 420px;">Topic</th>
-				<th style="width: 140px;">Reading</th>
-        <th style="width: 140px;">Notes</th>
+				<th style="width: 100px;">Reading</th>
+        <th style="width: 180px;">Notes</th>
       </tr>
       <tr>
         <td>Fri<br/> 9/9/22</td>
@@ -59,7 +59,7 @@
 					<a href="assets/01-stable-matching.pdf">[slides]</a>
 				</td>
 				<td>KT 1.1</td>
-        <td>HW1 Out<br/> <a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
+        <td>HW1 Out <a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
       </tr>
       <tr>
         <td>Tue<br/> 9/13/22</td>
@@ -85,15 +85,19 @@
 				</td>
 				<td>KT 4.5-4.6<br/>E 7</td>
         <td><strong>HW1 Due</strong><br/>
-				HW2 Out</td>
+				HW2 Out <a href="assets/hw2.pdf">[pdf]</a> <a href="assets/hw2-src.tex">[src]</td>
       </tr>
       <tr>
         <td>Tue<br/>9/20/22</td>
         <td>
 					<strong>Lecture 4: Dynamic Programming I</strong><br/>
+					<ul>
+						<li>Weighted Interval Scheduling</li>
+						<li>Segmented Least Squares</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>KT 6.1-6.3</td>
         <td></td>
       </tr>
       <tr>
@@ -108,8 +112,6 @@
       <tr>
         <td>Tue<br/>9/27/22</td>
         <td>
-					<strong>Lecture 6: Dynamic Programming III</strong><br/>
-					[slides]
 				</td>
 				<td></td>
 				<td></td>
