--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -81,7 +81,7 @@
 					<ul>
 						<li>Minimum Spanning Tree</li>
 					</ul>
-					[slides]
+					<a href="assets/03-mst.pdf">[slides]</a>
 				</td>
 				<td>KT 4.5-4.6<br/>E 7</td>
         <td><strong>HW1 Due</strong><br/>
