--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -45,8 +45,8 @@
       <tr>
         <th style="width: 100px;">Date</th>
         <th style="width: 420px;">Topic</th>
-				<th style="width: 100px;">Reading</th>
-        <th style="width: 180px;">Notes</th>
+				<th style="width: 140px;">Reading</th>
+        <th style="width: 140px;">Notes</th>
       </tr>
       <tr>
         <td>Fri<br/> 9/9/22</td>
@@ -59,7 +59,7 @@
 					<a href="assets/01-stable-matching.pdf">[slides]</a>
 				</td>
 				<td>KT 1.1</td>
-        <td>HW1 Out <a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
+        <td>HW1 Out<br/><a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
       </tr>
       <tr>
         <td>Tue<br/> 9/13/22</td>
@@ -85,7 +85,7 @@
 				</td>
 				<td>KT 4.5-4.6<br/>E 7</td>
         <td><strong>HW1 Due</strong><br/>
-				HW2 Out <a href="assets/hw2.pdf">[pdf]</a> <a href="assets/hw2-src.tex">[src]</td>
+				HW2 Out<br/><a href="assets/hw2.pdf">[pdf]</a> <a href="assets/hw2-src.tex">[src]</td>
       </tr>
       <tr>
         <td>Tue<br/>9/20/22</td>
@@ -93,7 +93,7 @@
 					<strong>Lecture 4: Dynamic Programming I</strong><br/>
 					<ul>
 						<li>Weighted Interval Scheduling</li>
-						<li>Segmented Least Squares</li>
+						<li>Rod Cutting</li>
 					</ul>
 					[slides]
 				</td>
@@ -104,23 +104,38 @@
         <td>Fri<br/>9/23/22</td>
         <td>
 					<strong>Lecture 5: Dynamic Programming II</strong><br/>
+					<ul>
+						<li>Knapsack</li>
+						<li>Shortest Paths</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>KT 6.4<br/>KT 6.8-6.9</td>
         <td></td>
       </tr>
       <tr>
         <td>Tue<br/>9/27/22</td>
         <td>
+					<strong>Lecture 6: Network Flow I</strong><br/>
+					<ul>
+						<li>Ford-Fulkerson</li>
+						<li>Duality</li>
+					</ul>
+					[slides]
 				</td>
-				<td></td>
+				<td>KT 7.1-7.2</td>
 				<td></td>
       </tr>
       <tr>
         <td>Fri<br/>9/30/22</td>
         <td>
+					<strong>Lecture 7: Network Flow II</strong><br/>
+					<ul>
+						<li>Choosing Good Paths</li>
+					</ul>
+					[slides]
 				</td>
-				<td></td>
+				<td>KT 7.3<br/>E 10.6</td>
         <td><strong>HW2 Due</strong><br/>
 				HW3 Out</td>
       </tr>
@@ -150,7 +165,8 @@
         <td>
 				</td>
 				<td></td>
-        <td></td>
+        <td><strong>HW3 Due</strong><br/>
+				HW4 Out</td>
       </tr>
       <tr>
         <td>Tue<br/>10/18/22</td>
@@ -178,7 +194,7 @@
         <td>
 				</td>
 				<td></td>
-        <td></td>
+				<td><strong>HW4 Due</strong></td>
       </tr>
       <tr>
         <td>Tue<br/>11/1/22</td>
