fixed link to boston dp

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       
 	  <p>My research centers on the foundations of privacy for machine learning and statistics, in particular differential privacy and its surprising interplay with other topics such as statistical validity, robustness, cryptography, and fairness. My background is in theoretical computer science, but increasingly my work spans machine learning, statistics, cryptography, and cybersecurity.  My research and teaching have been recognized with an NSF CAREER award and the Ruth and Joel Spira Outstanding Teaching Award.
 			
-		<p>I am a member of the <a href="bostondataprivacy.github.io">Boston-Area Data Privacy Group</a> and I also co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a>, and <a href="https://differentialprivacy.org">differentialprivacy.org</a>.  
+		<p>I am a member of the <a href="https://bostondataprivacy.github.io">Boston-Area Data Privacy Group</a> and I also co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a>, and <a href="https://differentialprivacy.org">differentialprivacy.org</a>.  
 
 		<p>At Northeastern, I am a member of the <a href="https://www2.ccs.neu.edu/theory/">Theory Group,</a> the <a href="https://cyber.khoury.northeastern.edu/">Cybersecurity & Privacy Institute,</a> and the <a href="https://ai.northeastern.edu/">Institute for Experiential AI.</a></p>
 			
