--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -93,9 +93,9 @@
 					<strong>Lecture 4: Dynamic Programming I</strong><br/>
 					<ul>
 						<li>Weighted Interval Scheduling</li>
-						<li>Rod Cutting</li>
+						<li>Log Cutting</li>
 					</ul>
-					[slides]
+					<a href="assets/04-dp-I.pdf">[slides]</a>
 				</td>
 				<td>KT 6.1-6.3</td>
         <td></td>
