--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -142,6 +142,8 @@
       <tr>
         <td>Tue<br/>10/4/22</td>
         <td>
+					<strong>Lecture 8: Applications of Network Flow I</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -149,6 +151,8 @@
       <tr>
         <td>Fri<br/>10/7/22</td>
         <td>
+					<strong>Lecture 9: Applications of Network Flow II</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -156,6 +160,8 @@
       <tr>
         <td>Tue<br/>10/11/22</td>
         <td>
+					<strong>Lecture 10: Linear Programming I</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -163,6 +169,8 @@
       <tr>
         <td>Fri<br/>10/14/22</td>
         <td>
+					<strong>Lecture 11: Linear Programming II</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td><strong>HW3 Due</strong><br/>
