--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -108,7 +108,7 @@
 						<li>Knapsack</li>
 						<li>Shortest Paths</li>
 					</ul>
-					[slides]
+					<a href="assets/05-dp-II.pdf">[slides]</a>
 				</td>
 				<td>KT 6.4<br/>KT 6.8-6.9</td>
         <td></td>
