--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -199,6 +199,7 @@
       <tr>
         <td>Tue<br/>11/1/22</td>
         <td>
+					<strong>Midterm Exam (in class)</strong>
 				</td>
 				<td></td>
         <td></td>
