--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -179,6 +179,7 @@
       <tr>
         <td>Tue<br/>10/18/22</td>
         <td>
+					<strong>Lecture 12: Intractability I</strong>
 				</td>
 				<td></td>
         <td></td>
@@ -186,6 +187,7 @@
       <tr>
         <td>Fri<br/>10/21/22</td>
         <td>
+					<strong>Lecture 13: Intractability II</strong>
 				</td>
 				<td></td>
         <td></td>
