--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -179,7 +179,8 @@
       <tr>
         <td>Tue<br/>10/18/22</td>
         <td>
-					<strong>Lecture 12: Intractability I</strong>
+					<strong>Lecture 12: Intractability I</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -187,7 +188,8 @@
       <tr>
         <td>Fri<br/>10/21/22</td>
         <td>
-					<strong>Lecture 13: Intractability II</strong>
+					<strong>Lecture 13: Intractability II</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
