--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -121,7 +121,7 @@
 						<li>Ford-Fulkerson</li>
 						<li>Duality</li>
 					</ul>
-					[slides]
+					<a href="assets/06-network-flow-I.pdf">[slides]</a>
 				</td>
 				<td>KT 7.1-7.2</td>
 				<td></td>
