--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -133,11 +133,11 @@
 					<ul>
 						<li>Choosing Good Paths</li>
 					</ul>
-					[slides]
+					<a href="assets/07-network-flow-II.pdf">[slides]</a>
 				</td>
 				<td>KT 7.3<br/>E 10.6</td>
         <td><strong>HW2 Due</strong><br/>
-				HW3 Out</td>
+				HW3 Out<br/><a href="assets/hw3.pdf">[pdf]</a> <a href="assets/hw3-src.tex">[src]</td></td>
       </tr>
       <tr>
         <td>Tue<br/>10/4/22</td>
@@ -206,12 +206,13 @@
         <td>
 				</td>
 				<td></td>
-				<td><strong>HW4 Due</strong></td>
+				<td><strong>HW4 Due</strong><br/>
+					HW5 Out</td>
       </tr>
       <tr>
         <td>Tue<br/>11/1/22</td>
         <td>
-					<strong>Midterm Exam (in class)</strong>
+					<strong>Midterm Exam (In Class)</strong>
 				</td>
 				<td></td>
         <td></td>
@@ -250,7 +251,8 @@
         <td>
 				</td>
 				<td></td>
-        <td></td>
+        <td><strong>HW5 Due</strong><br/>
+					HW6 Out</td>
       </tr>
       <tr>
         <td>Tue<br/>11/22/22</td>
@@ -293,7 +295,7 @@
         <td>
 				</td>
 				<td></td>
-        <td></td>
+        <td><strong>HW6 Due</strong></td>
       </tr>
       <tr>
         <td>Tue<br/>12/13/22</td>
