--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -142,19 +142,26 @@
       <tr>
         <td>Tue<br/>10/4/22</td>
         <td>
-					<strong>Lecture 8: Applications of Network Flow I</strong><br/>
+					<strong>Lecture 8: Applications of Network Flow</strong><br/>
+					<ul>
+						<li>Maximum bipartite matching</li>
+						<li>Image segmentation</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>KT 7.5<br/>KT 7.10</td>
         <td></td>
       </tr>
       <tr>
         <td>Fri<br/>10/7/22</td>
         <td>
-					<strong>Lecture 9: Applications of Network Flow II</strong><br/>
+					<strong>Lecture 9: Generalizing Network Flow</strong><br/>
+					<ul>
+						<li>Minimum cost perfect matching</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>KT 7.13</td>
         <td></td>
       </tr>
       <tr>
