--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -38,7 +38,7 @@
 
       <h4>Course Schedule</h4>
 			
-			<p><strong>Reading Code:</strong> KT = Kleinberg Tardos; E = Erickson</p>
+			<p><strong>Reading Code:</strong> KT = Kleinberg Tardos; E = Erickson; W = Kevin Wayne's Notes'</p>
       
       <p>
       <table class="rg" style="margin-left:auto; margin-right:auto;">
@@ -144,8 +144,8 @@
         <td>
 					<strong>Lecture 8: Applications of Network Flow</strong><br/>
 					<ul>
-						<li>Maximum bipartite matching</li>
-						<li>Image segmentation</li>
+						<li>Maximum Bipartite Matching</li>
+						<li>Image Segmentation</li>
 					</ul>
 					[slides]
 				</td>
@@ -157,7 +157,7 @@
         <td>
 					<strong>Lecture 9: Generalizing Network Flow</strong><br/>
 					<ul>
-						<li>Minimum cost perfect matching</li>
+						<li>Minimum Cost Perfect Matching</li>
 					</ul>
 					[slides]
 				</td>
@@ -168,18 +168,26 @@
         <td>Tue<br/>10/11/22</td>
         <td>
 					<strong>Lecture 10: Linear Programming I</strong><br/>
+					<ul>
+						<li>Basic Concepts</li>
+						<li>Simplex</li>
+						<li>Duality</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>W <a href="assets/lp-notes-I.pdf">I</a>, <a href="assets/lp-notes-II.pdf">II</a></td>
         <td></td>
       </tr>
       <tr>
         <td>Fri<br/>10/14/22</td>
         <td>
 					<strong>Lecture 11: Linear Programming II</strong><br/>
+					<ul>
+						<li>Ellipsoid</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>W <a href="assets/lp-notes-III.pdf">III</a></td>
         <td><strong>HW3 Due</strong><br/>
 				HW4 Out</td>
       </tr>
