--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -38,7 +38,7 @@
 
       <h4>Course Schedule</h4>
 			
-			<p><strong>Reading Code:</strong> KT = Kleinberg Tardos; E = Erickson; W = Kevin Wayne's Notes'</p>
+			<p><strong>Reading Code:</strong> KT = Kleinberg-Tardos; E = Erickson; W = Kevin Wayne's Notes</p>
       
       <p>
       <table class="rg" style="margin-left:auto; margin-right:auto;">
