--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -147,7 +147,7 @@
 						<li>Maximum Bipartite Matching</li>
 						<li>Image Segmentation</li>
 					</ul>
-					[slides]
+					<a href="assets/08-flow-applications.pdf">[slides]</a>
 				</td>
 				<td>KT 7.5<br/>KT 7.10</td>
         <td></td>
