--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -159,7 +159,7 @@
 					<ul>
 						<li>Minimum Cost Perfect Matching</li>
 					</ul>
-					[slides]
+					<a href="assets/09-min-cost-matching.pdf">[slides]</a>
 				</td>
 				<td>KT 7.13</td>
         <td></td>
@@ -171,9 +171,8 @@
 					<ul>
 						<li>Basic Concepts</li>
 						<li>Simplex</li>
-						<li>Duality</li>
 					</ul>
-					[slides]
+					<a href="assets/10-linear-prog-I.pdf">[slides]</a>
 				</td>
 				<td>W <a href="assets/lp-notes-I.pdf">I</a>, <a href="assets/lp-notes-II.pdf">II</a></td>
         <td></td>
@@ -183,6 +182,7 @@
         <td>
 					<strong>Lecture 11: Linear Programming II</strong><br/>
 					<ul>
+						<li>Duality</li>
 						<li>Ellipsoid</li>
 					</ul>
 					[slides]
