--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -189,12 +189,17 @@
 				</td>
 				<td>W <a href="assets/lp-notes-III.pdf">III</a></td>
         <td><strong>HW3 Due</strong><br/>
-				HW4 Out</td>
+				HW4 Out<br/><a href="assets/hw4.pdf">[pdf]</a> <a href="assets/hw4-src.tex">[src]</td></td></td>
       </tr>
       <tr>
         <td>Tue<br/>10/18/22</td>
         <td>
 					<strong>Lecture 12: Intractability I</strong><br/>
+					(Guest Lecture: Lydia Zakynthinou)<br/>
+					<ul>
+						<li>NP-Completeness</li>
+						<li>Independent Set, 3D Matching</li>
+					</ul>
 					[slides]
 				</td>
 				<td></td>
@@ -204,6 +209,11 @@
         <td>Fri<br/>10/21/22</td>
         <td>
 					<strong>Lecture 13: Intractability II</strong><br/>
+					(Guest Lecture: Lydia Zakynthinou)<br/>
+					<ul>
+						<li>Finish NP-Completeness</li>
+						<li>PSPACE-Completeness</li>
+					</ul>
 					[slides]
 				</td>
 				<td></td>
