--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -198,7 +198,7 @@
 					(Guest Lecture: Lydia Zakynthinou)<br/>
 					<ul>
 						<li>NP-Completeness</li>
-						<li>Independent Set, 3D Matching</li>
+						<li>First Reductions</li>
 					</ul>
 					[slides]
 				</td>
@@ -211,7 +211,7 @@
 					<strong>Lecture 13: Intractability II</strong><br/>
 					(Guest Lecture: Lydia Zakynthinou)<br/>
 					<ul>
-						<li>Finish NP-Completeness</li>
+						<li>More Reductions</li>
 						<li>PSPACE-Completeness</li>
 					</ul>
 					[slides]
@@ -222,6 +222,12 @@
       <tr>
         <td>Tue<br/>10/25/22</td>
         <td>
+					<strong>Lecture 14: Approximation I</strong><br/>
+					<ul>
+						<li>Knapsack</li>
+						<li>Maximum Coverage</li>
+					</ul>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -229,6 +235,12 @@
       <tr>
         <td>Fri<br/>10/28/22</td>
         <td>
+					<strong>Lecture 15: Approximation II</strong><br/>
+					<ul>
+						<li>Set Cover</li>
+						<li>Vertex Cover</li>
+					</ul>
+					[slides]
 				</td>
 				<td></td>
 				<td><strong>HW4 Due</strong><br/>
