--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -185,7 +185,7 @@
 						<li>Duality</li>
 						<li>Ellipsoid</li>
 					</ul>
-					[slides]
+					<a href="assets/11-linear-prog-II.pdf">[slides]</a>
 				</td>
 				<td>W <a href="assets/lp-notes-III.pdf">III</a></td>
         <td><strong>HW3 Due</strong><br/>
@@ -200,7 +200,7 @@
 						<li>NP-Completeness</li>
 						<li>First Reductions</li>
 					</ul>
-					[slides]
+					<a href="assets/12-intractability-I.pdf">[slides]</a>
 				</td>
 				<td>KT 8.1-8.8</td>
         <td></td>
@@ -214,7 +214,7 @@
 						<li>More Reductions</li>
 						<li>PSPACE-Completeness</li>
 					</ul>
-					[slides]
+					<a href="assets/13-intractability-II.pdf">[slides]</a>
 				</td>
 				<td>KT 9.*</td>
         <td></td>
