--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Instance-Optimal Differentially Private Estimation</strong>
+	<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://audramarymcmillan.wixsite.com/mysite">Audra McMillan</a>,
+	<a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>Multitask Learning via Shared Features: Algorithms and Hardness</strong>
 	<a href="https://arxiv.org/abs/2209.03112"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="">Konstantina Bairaktari</a>,
