--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -189,7 +189,7 @@
 				</td>
 				<td>W <a href="assets/lp-notes-III.pdf">III</a></td>
         <td><strong>HW3 Due</strong><br/>
-				HW4 Out<br/><a href="assets/hw4.pdf">[pdf]</a> <a href="assets/hw4-src.tex">[src]</td></td></td>
+				HW4 Out<br/><a href="assets/hw4.pdf">[pdf]</a> <a href="assets/hw4-src.tex">[src]</a></td></td></td>
       </tr>
       <tr>
         <td>Tue<br/>10/18/22</td>
@@ -243,8 +243,7 @@
 					[slides]
 				</td>
 				<td></td>
-				<td><strong>HW4 Due</strong><br/>
-					HW5 Out</td>
+				<td><strong>HW4 Due</strong>
       </tr>
       <tr>
         <td>Tue<br/>11/1/22</td>
@@ -259,7 +258,7 @@
         <td>
 				</td>
 				<td></td>
-        <td></td>
+        <td>HW5 Out<br/><a href="assets/hw5.pdf">[pdf]</a> <a href="assets/hw5-src.tex">[src]</a></td></td>
       </tr>
       <tr>
         <td>Tue<br/>11/8/22</td>
