--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -256,6 +256,12 @@
       <tr>
         <td>Fri<br/>11/4/22</td>
         <td>
+					<strong>Lecture 16: Probability Review</strong><br/>
+					<ul>
+						<li>Randomness in Algorithms</li>
+						<li>Balls and Bins</li>
+					</ul>
+					[slides]
 				</td>
 				<td></td>
         <td>HW5 Out<br/><a href="assets/hw5.pdf">[pdf]</a> <a href="assets/hw5-src.tex">[src]</a></td></td>
