--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -227,7 +227,7 @@
 						<li>Knapsack</li>
 						<li>Maximum Coverage</li>
 					</ul>
-					[slides]
+					<a href="assets/14-approx-I.pdf">[slides]</a>
 				</td>
 				<td></td>
         <td></td>
@@ -240,7 +240,7 @@
 						<li>Set Cover</li>
 						<li>Vertex Cover</li>
 					</ul>
-					[slides]
+					<a href="assets/15-approx-II.pdf">[slides]</a>
 				</td>
 				<td></td>
 				<td><strong>HW4 Due</strong>
@@ -256,12 +256,12 @@
       <tr>
         <td>Fri<br/>11/4/22</td>
         <td>
-					<strong>Lecture 16: Probability Review</strong><br/>
+					<strong>Lecture 16: Randomization I</strong><br/>
 					<ul>
 						<li>Randomness in Algorithms</li>
 						<li>Balls and Bins</li>
 					</ul>
-					[slides]
+					<a href="assets/16-randomized-I.pdf">[slides]</a>
 				</td>
 				<td></td>
         <td>HW5 Out<br/><a href="assets/hw5.pdf">[pdf]</a> <a href="assets/hw5-src.tex">[src]</a></td></td>
