--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -269,6 +269,12 @@
       <tr>
         <td>Tue<br/>11/8/22</td>
         <td>
+					<strong>Lecture 17: Randomization II</strong><br/>
+					<ul>
+						<li>Finish Balls and Bins</li>
+						<li>String Matching</li>
+					</ul>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
