--- a/cs7800-f22/course-info.html
+++ b/cs7800-f22/course-info.html
@@ -155,7 +155,7 @@
 			<ul>
 				<li>6 homework assignments (50%)</li>
 				<li>an in-class midterm exam (20%)</li>
-				<li>a (likely in-class) final exam (30%)</li>
+				<li>a take-home final exam (30%)</li>
 			</ul>
 		<p>The assignments will be scored so that the total number of points adds up to 500 and any point you earn is treated equally.  So the final exam will be worth 150, the midterm 100, and the homework assignments will sum to 250.
 			
