--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -38,7 +38,7 @@
 
       <h4>Course Schedule</h4>
 			
-			<p><strong>Reading Code:</strong> KT = Kleinberg-Tardos; E = Erickson; W = Kevin Wayne's Notes</p>
+			<p><strong>Reading Code:</strong> KT = Kleinberg-Tardos; E = Erickson; W = Kevin Wayne's Notes; R = Tim Roughgarden's Notes</p>
       
       <p>
       <table class="rg" style="margin-left:auto; margin-right:auto;">
@@ -49,7 +49,7 @@
         <th style="width: 140px;">Notes</th>
       </tr>
       <tr>
-        <td>Fri<br/> 9/9/22</td>
+        <td>Fri<br/> 09/09/22</td>
         <td>
 					<strong>Lecture 1: Introduction</strong><br/>
 					<ul>
@@ -62,7 +62,7 @@
         <td>HW1 Out<br/><a href="assets/hw1.pdf">[pdf]</a> <a href="assets/hw1-src.tex">[src]</td>
       </tr>
       <tr>
-        <td>Tue<br/> 9/13/22</td>
+        <td>Tue<br/> 09/13/22</td>
         <td>
 					<strong>Lecture 2: Greedy Algorithms I</strong><br/>
 					<ul>
@@ -75,7 +75,7 @@
         <td></td>
       </tr>
       <tr>
-        <td>Fri<br/> 9/16/22</td>
+        <td>Fri<br/> 09/16/22</td>
         <td>
 					<strong>Lecture 3: Greedy Algorithms II</strong><br/>
 					<ul>
@@ -88,7 +88,7 @@
 				HW2 Out<br/><a href="assets/hw2.pdf">[pdf]</a> <a href="assets/hw2-src.tex">[src]</td>
       </tr>
       <tr>
-        <td>Tue<br/>9/20/22</td>
+        <td>Tue<br/>09/20/22</td>
         <td>
 					<strong>Lecture 4: Dynamic Programming I</strong><br/>
 					<ul>
@@ -101,7 +101,7 @@
         <td></td>
       </tr>
       <tr>
-        <td>Fri<br/>9/23/22</td>
+        <td>Fri<br/>09/23/22</td>
         <td>
 					<strong>Lecture 5: Dynamic Programming II</strong><br/>
 					<ul>
@@ -114,7 +114,7 @@
         <td></td>
       </tr>
       <tr>
-        <td>Tue<br/>9/27/22</td>
+        <td>Tue<br/>09/27/22</td>
         <td>
 					<strong>Lecture 6: Network Flow I</strong><br/>
 					<ul>
@@ -127,7 +127,7 @@
 				<td></td>
       </tr>
       <tr>
-        <td>Fri<br/>9/30/22</td>
+        <td>Fri<br/>09/30/22</td>
         <td>
 					<strong>Lecture 7: Network Flow II</strong><br/>
 					<ul>
@@ -140,7 +140,7 @@
 				HW3 Out<br/><a href="assets/hw3.pdf">[pdf]</a> <a href="assets/hw3-src.tex">[src]</td></td>
       </tr>
       <tr>
-        <td>Tue<br/>10/4/22</td>
+        <td>Tue<br/>10/04/22</td>
         <td>
 					<strong>Lecture 8: Applications of Network Flow</strong><br/>
 					<ul>
@@ -153,7 +153,7 @@
         <td></td>
       </tr>
       <tr>
-        <td>Fri<br/>10/7/22</td>
+        <td>Fri<br/>10/07/22</td>
         <td>
 					<strong>Lecture 9: Generalizing Network Flow</strong><br/>
 					<ul>
@@ -229,7 +229,7 @@
 					</ul>
 					<a href="assets/14-approx-I.pdf">[slides]</a>
 				</td>
-				<td></td>
+				<td>R <a href="assets/approx-notes-I.pdf">I</a></td>
         <td></td>
       </tr>
       <tr>
@@ -242,11 +242,11 @@
 					</ul>
 					<a href="assets/15-approx-II.pdf">[slides]</a>
 				</td>
-				<td></td>
+				<td>R <a href="assets/approx-notes-II.pdf">II</a></td>
 				<td><strong>HW4 Due</strong>
       </tr>
       <tr>
-        <td>Tue<br/>11/1/22</td>
+        <td>Tue<br/>11/01/22</td>
         <td>
 					<strong>Midterm Exam (In Class)</strong>
 				</td>
@@ -254,29 +254,29 @@
         <td></td>
       </tr>
       <tr>
-        <td>Fri<br/>11/4/22</td>
+        <td>Fri<br/>11/04/22</td>
         <td>
 					<strong>Lecture 16: Randomization I</strong><br/>
 					<ul>
 						<li>Randomness in Algorithms</li>
-						<li>Balls and Bins</li>
+						<li>Discrete Probability</li>
 					</ul>
 					<a href="assets/16-randomized-I.pdf">[slides]</a>
 				</td>
-				<td></td>
+				<td>E 1.1-1.5</td></td>
         <td>HW5 Out<br/><a href="assets/hw5.pdf">[pdf]</a> <a href="assets/hw5-src.tex">[src]</a></td></td>
       </tr>
       <tr>
-        <td>Tue<br/>11/8/22</td>
+        <td>Tue<br/>11/08/22</td>
         <td>
 					<strong>Lecture 17: Randomization II</strong><br/>
 					<ul>
-						<li>Finish Balls and Bins</li>
+						<li>Balls and Bins</li>
 						<li>String Matching</li>
 					</ul>
-					[slides]
+					<a href="assets/17-randomized-II.pdf">[slides]</a>
 				</td>
-				<td></td>
+				<td>KT 13.9-13.10<br/>E 7.1-7.3</td>
         <td></td>
       </tr>
       <tr>
@@ -290,21 +290,31 @@
       <tr>
         <td>Tue<br/>11/15/22</td>
         <td>
+					<strong>Lecture 18: Hashing I</strong><br/>
+					<ul>
+						<li>Dictionaries</li>
+						<li>Universal Hash Functions</li>
+					</ul>
 				</td>
-				<td></td>
+				<td>E 5.1-5.6</td>
         <td></td>
       </tr>
       <tr>
         <td>Fri<br/>11/18/22</td>
         <td>
+					<strong>Lecture 19: Hashing II</strong><br/>
+					<ul>
+						<li>Perfect Hashing</li>
+					</ul>
 				</td>
-				<td></td>
+				<td>E 5.7</td>
         <td><strong>HW5 Due</strong><br/>
 					HW6 Out</td>
       </tr>
       <tr>
         <td>Tue<br/>11/22/22</td>
         <td>
+					<strong>No Class (Pre-Thanksgiving)</strong>
 				</td>
 				<td></td>
         <td></td>
@@ -320,27 +330,31 @@
       <tr>
         <td>Tue<br/>11/29/22</td>
         <td>
+					<strong>Lecture 20</strong>
 				</td>
 				<td></td>
         <td></td>
       </tr>
       <tr>
-        <td>Fri<br/>12/2/22</td>
+        <td>Fri<br/>12/02/22</td>
         <td>
+					<strong>Lecture 21</strong>
 				</td>
 				<td></td>
         <td></td>
       </tr>
       <tr>
-        <td>Tue<br/>12/6/22</td>
+        <td>Tue<br/>12/06/22</td>
         <td>
+					<strong>Lecture 22</strong>
 				</td>
 				<td></td>
         <td></td>
       </tr>
       <tr>
-        <td>Fri<br/>12/9/22</td>
+        <td>Fri<br/>12/09/22</td>
         <td>
+					<strong>Lecture 23</strong>
 				</td>
 				<td></td>
         <td><strong>HW6 Due</strong></td>
@@ -348,6 +362,7 @@
       <tr>
         <td>Tue<br/>12/13/22</td>
         <td>
+					<strong>Class Party!<strong>
 				</td>
 				<td></td>
         <td></td>
@@ -355,6 +370,7 @@
       <tr>
         <td>Fri<br/>12/16/22</td>
         <td>
+					<strong>No Class (Take-Home Final Exam Period)</strong>
 				</td>
 				<td></td>
         <td></td>
