--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -43,10 +43,10 @@
       <p>
       <table class="rg" style="margin-left:auto; margin-right:auto;">
       <tr>
-        <th style="width: 100px;">Date</th>
+        <th style="width: 110px;">Date</th>
         <th style="width: 420px;">Topic</th>
-				<th style="width: 140px;">Reading</th>
-        <th style="width: 140px;">Notes</th>
+				<th style="width: 150px;">Reading</th>
+        <th style="width: 150px;">Notes</th>
       </tr>
       <tr>
         <td>Fri<br/> 09/09/22</td>
@@ -365,15 +365,16 @@
 					<strong>Class Party!<strong>
 				</td>
 				<td></td>
-        <td></td>
+        <td>Final Out<br/>
+					(Gradescope)</td>
       </tr>
       <tr>
         <td>Fri<br/>12/16/22</td>
         <td>
-					<strong>No Class (Take-Home Final Exam Period)</strong>
+					<strong>No Class (Work on the Final)</strong>
 				</td>
 				<td></td>
-        <td></td>
+        <td><strong>Final Due</strong></td>
       </tr>
       </table>
       
