--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -290,11 +290,12 @@
       <tr>
         <td>Tue<br/>11/15/22</td>
         <td>
-					<strong>Lecture 18: Hashing I</strong><br/>
+					<strong>Lecture 18: Randomized III</strong><br/>
 					<ul>
-						<li>Dictionaries</li>
-						<li>Universal Hash Functions</li>
+						<li>Hash Tables</li>
+						<li>Randomized Hash Families</li>
 					</ul>
+					<a href="assets/18-randomized-III.pdf">[slides]</a>
 				</td>
 				<td>E 5.1-5.6</td>
         <td></td>
@@ -302,10 +303,11 @@
       <tr>
         <td>Fri<br/>11/18/22</td>
         <td>
-					<strong>Lecture 19: Hashing II</strong><br/>
+					<strong>Lecture 19: Randomized IV</strong><br/>
 					<ul>
-						<li>Perfect Hashing</li>
+						<li>Universal Hash Families</li>
 					</ul>
+					<a href="assets/19-randomized-IV.pdf">[slides]</a>
 				</td>
 				<td>E 5.7</td>
         <td><strong>HW5 Due</strong><br/>
@@ -330,7 +332,12 @@
       <tr>
         <td>Tue<br/>11/29/22</td>
         <td>
-					<strong>Lecture 20</strong>
+					<strong>Lecture 20: Streaming I</strong>
+					<ul>
+						<li>Streaming Algorithms</li>
+						<li>Counting</li>
+					</ul>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -338,7 +345,11 @@
       <tr>
         <td>Fri<br/>12/02/22</td>
         <td>
-					<strong>Lecture 21</strong>
+					<strong>Lecture 21: Streaming II</strong>
+					<ul>
+						<li>Distinct Elements</li>
+					</ul>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -346,7 +357,8 @@
       <tr>
         <td>Tue<br/>12/06/22</td>
         <td>
-					<strong>Lecture 22</strong>
+					<strong>Lecture 22</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td></td>
@@ -354,7 +366,8 @@
       <tr>
         <td>Fri<br/>12/09/22</td>
         <td>
-					<strong>Lecture 23</strong>
+					<strong>Lecture 23</strong><br/>
+					[slides]
 				</td>
 				<td></td>
         <td><strong>HW6 Due</strong></td>
