--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -38,7 +38,7 @@
 
       <h4>Course Schedule</h4>
 			
-			<p><strong>Reading Code:</strong> KT = Kleinberg-Tardos; E = Erickson; W = Kevin Wayne's Notes; R = Tim Roughgarden's Notes</p>
+			<p><strong>Reading Code:</strong> KT = Kleinberg-Tardos; E = Erickson; W = Kevin Wayne's Notes; R = Tim Roughgarden's Notes; A = Sepehr Assadi's Notes</p>
       
       <p>
       <table class="rg" style="margin-left:auto; margin-right:auto;">
@@ -339,7 +339,7 @@
 					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td><a href="assets/streaming-notes.pdf">A</a> 1.1-1.3</td>
         <td></td>
       </tr>
       <tr>
@@ -351,7 +351,7 @@
 					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td><a href="assets/streaming-notes.pdf">A</a> 2.1-3</td>
         <td></td>
       </tr>
       <tr>
