..: git pull git push

--- a/students.html
+++ b/students.html
@@ -53,14 +53,14 @@
 
 <h4>Alumni</h4>
 	<ul>
-		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc (2018&ndash;2020) &rarr; Research Scientist at Apple
+		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 
-		<li> <a href="http://www.ccs.neu.edu/home/albertcheu/"> Albert Cheu</a>, PhD (2021) &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
-		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD (2021) &rarr; Postdoc at University of Waterloo
+		<li> <a href="http://www.ccs.neu.edu/home/albertcheu/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
+		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo
 
-		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate (2016) &rarr; Ph.D. Student at Harvard University
-		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate (2018&ndash;2019) &rarr; Ph.D. Student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
-		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate (2021)
+		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; Ph.D. Student at Harvard University
+		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; Ph.D. Student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
+		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate 2021 &rarr; Eight Sleep
 	</ul>
 
 </div>
