--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -310,8 +310,7 @@
 					<a href="assets/19-randomized-IV.pdf">[slides]</a>
 				</td>
 				<td>E 5.7</td>
-        <td><strong>HW5 Due</strong><br/>
-					HW6 Out</td>
+        <td><strong>HW5 Due</strong></td>
       </tr>
       <tr>
         <td>Tue<br/>11/22/22</td>
@@ -340,7 +339,7 @@
 					[slides]
 				</td>
 				<td><a href="assets/streaming-notes.pdf">A</a> 1.1-1.3</td>
-        <td></td>
+        <td>HW6 Out<br/><a href="assets/hw6.pdf">[pdf]</a> <a href="assets/hw6-src.tex">[src]</a></td>
       </tr>
       <tr>
         <td>Fri<br/>12/02/22</td>
