--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -333,8 +333,8 @@
         <td>
 					<strong>Lecture 20: Streaming I</strong>
 					<ul>
-						<li>Streaming Algorithms</li>
-						<li>Counting</li>
+						<li>Reservoir Sampling</li>
+						<li>Distinct Elements</li>
 					</ul>
 					[slides]
 				</td>
@@ -345,9 +345,6 @@
         <td>Fri<br/>12/02/22</td>
         <td>
 					<strong>Lecture 21: Streaming II</strong>
-					<ul>
-						<li>Distinct Elements</li>
-					</ul>
 					[slides]
 				</td>
 				<td><a href="assets/streaming-notes.pdf">A</a> 2.1-3</td>
