--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -344,7 +344,7 @@
       <tr>
         <td>Fri<br/>12/02/22</td>
         <td>
-					<strong>Lecture 21: Streaming II</strong>
+					<strong>Lecture 21: Streaming II</strong><br/>
 					[slides]
 				</td>
 				<td><a href="assets/streaming-notes.pdf">A</a> 2.1-3</td>
