--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -334,9 +334,8 @@
 					<strong>Lecture 20: Streaming I</strong>
 					<ul>
 						<li>Reservoir Sampling</li>
-						<li>Distinct Elements</li>
 					</ul>
-					[slides]
+					<a href="assets/20-streaming-I.pdf">[slides]</a>
 				</td>
 				<td><a href="assets/streaming-notes.pdf">A</a> 1.1-1.3</td>
         <td>HW6 Out<br/><a href="assets/hw6.pdf">[pdf]</a> <a href="assets/hw6-src.tex">[src]</a></td>
@@ -345,7 +344,10 @@
         <td>Fri<br/>12/02/22</td>
         <td>
 					<strong>Lecture 21: Streaming II</strong><br/>
-					[slides]
+					<ul>
+						<li>Distinct Elements</li>
+					</ul>
+					<a href="assets/21-streaming-II.pdf">[slides]</a>
 				</td>
 				<td><a href="assets/streaming-notes.pdf">A</a> 2.1-3</td>
         <td></td>
@@ -353,37 +355,35 @@
       <tr>
         <td>Tue<br/>12/06/22</td>
         <td>
-					<strong>Lecture 22</strong><br/>
+					<strong>Lecture 22: Data Compression</strong><br/>
+					<ul>
+						<li>Huffman Codes</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>KT 4.8</td>
         <td></td>
       </tr>
       <tr>
         <td>Fri<br/>12/09/22</td>
         <td>
-					<strong>Lecture 23</strong><br/>
+					<strong>Lecture 23: No-Regret Learning</strong><br/>
+					<ul>
+						<li>Jon's Favorite Algorithm</li>
+					</ul>
 					[slides]
 				</td>
-				<td></td>
+				<td>R <a href="assets/mw-notes.pdf">I</a></td>
         <td><strong>HW6 Due</strong></td>
       </tr>
       <tr>
         <td>Tue<br/>12/13/22</td>
         <td>
-					<strong>Class Party!<strong>
+					<strong>Cookies and Companionship<strong>
 				</td>
 				<td></td>
         <td>Final Out<br/>
 					(Gradescope)</td>
-      </tr>
-      <tr>
-        <td>Fri<br/>12/16/22</td>
-        <td>
-					<strong>No Class (Work on the Final)</strong>
-				</td>
-				<td></td>
-        <td><strong>Final Due</strong></td>
       </tr>
       </table>
       
